# RGT

./: README.md
problem1/: .gitignore  CMakeLists.txt  main.cpp
problem2/: .gitignore  CMakeLists.txt  CircularBuffer.hpp  main.cpp
problem3/: .gitignore  CMakeLists.txt  ParallelProcessor.hpp  main.cpp
problem4/: .gitignore  library.db  main.py  manual_test.ps1  manual_test_output.jsonl  problem4.py  requirements.txt
problem4/tests/: conftest.py  test_api.py
